Bug 284957 - "Your payees" coloumn too narrow
Summary: "Your payees" coloumn too narrow
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.5.3
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-25 19:50 UTC by schlatter@phys.ethz.ch
Modified: 2011-12-10 11:11 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot of Payees screen (107.34 KB, image/jpeg)
2011-10-30 10:13 UTC, schlatter@phys.ethz.ch
Details

Note You need to log in before you can comment on or make changes to this bug.
Description schlatter@phys.ethz.ch 2011-10-25 19:50:53 UTC
Version:           4.5.3 (using KDE 4.7.2) 
OS:                Linux

The left hand coloumn (named "Your payees") in the "Payees" section is far too narrow on some displays (here: 1280x1024). The right hand area uses much scren-estate than it actually needs.

When going to Payees for the first time after KMyMoney was started, I can widen the left-hand coloumn a little bit (still less than I would like but at least a little). It stays at this width until I click on a payee and then go to the tab "Default Account". Then it shrinks to a really narrow width (can't read many payee names without scrolling horizontally). AND: The width can not be increased again until I restart KMyMoney.

Although this seems to be a rather trivial bug, it is really annoying!

Reproducible: Always

Steps to Reproduce:
Open a file with Payees
Go to Payees
Widen "Your payees" coloumn (works, at least a little bit)
Select a payee
Go to "Default Account" tab (=>"Your payees" shrinks")


Actual Results:  
After the described steps, the maximum width is blocked at a very narrow width which hardly allows to read the payee names. This seems to be more severe on a 1280x1024 display than on a 1440x900 display)

Expected Results:  
The width of the "Your payees" column should be far wider, so that payees remain readable. This can be done without compromising the readability of the tab area and worked correctly for me with KMyMoney 4.5.3 (KDE 4.6.2).

OS: Linux (i686) release 3.0.0-12-generic-pae
Compiler: gcc
Comment 1 Cristian Oneț 2011-10-26 07:07:13 UTC
I don't understand this, AFAIK there is a splitter between the payees list and the payee data and that splitter has not limitation and should be persistent. Did you try to adjust the splitter or just the column width of the list? Could you post a screenshot (you should blur out the data) just to make sure we are thinking about the same stuff?
Comment 2 schlatter@phys.ethz.ch 2011-10-30 10:13:40 UTC
Created attachment 65036 [details]
Screenshot of Payees screen
Comment 3 schlatter@phys.ethz.ch 2011-10-30 10:19:38 UTC
Yes, there is a splitter. Yes, I tried to adjust it. But it *does* have a limitation. The screenshot shows the right-most position I can move this splitter to. If I move it farther, the right-hand pane colapses to zero width (which is not what I want either).

Furthermore, the maximum width is not always the same. As soon as I click the "Default Account" time, it is reduced even more (as in the screenshot) and can not be reverted anymore without restarting KMyMoney.
Comment 4 Thomas Baumgart 2011-10-30 14:45:06 UTC
The collapsing of the splitter pane seems to be the default behavior of the QSplitter object. You can still grab it (it is maybe a pixel wide or so) and drag it to the right so that the payee list shows up again (tested with trunk).

I am not sure how much the screen resolution plays a role here: I have used 1920x1200 during my testing.
Comment 5 Cristian Oneț 2011-12-10 10:52:46 UTC
Git commit da97749c493641f2fe1f31c93489ee021b5dfeaf by Cristian Oneț.
Committed on 10/12/2011 at 11:39.
Pushed by conet into branch 'master'.

Do not allow the children widgets of the splitter to be collapsed.

This is needed in the payees and budgets view where the splitter has
two children and the data rendered on the right depends on the data
selected on the left so it does not make sense to hide (collapse)
any of the two widgets.

The setChildrenCollapsible call after restoreState is needed for users
that have an already saved state since the childrenCollapsible property
is saved with the state.

BUG: 284957

M  +1    -0    kmymoney/views/kbudgetview.cpp
M  +15   -11   kmymoney/views/kbudgetviewdecl.ui
M  +1    -0    kmymoney/views/kpayeesview.cpp
M  +26   -23   kmymoney/views/kpayeesviewdecl.ui

http://commits.kde.org/kmymoney/da97749c493641f2fe1f31c93489ee021b5dfeaf
Comment 6 Cristian Oneț 2011-12-10 11:02:42 UTC
Git commit 30cdf048db1078a68961f39bcfb56aec79d2f96d by Cristian Oneț.
Committed on 10/12/2011 at 11:39.
Pushed by conet into branch '4.6'.

Do not allow the children widgets of the splitter to be collapsed.

This is needed in the payees and budgets view where the splitter has
two children and the data rendered on the right depends on the data
selected on the left so it does not make sense to hide (collapse)
any of the two widgets.

The setChildrenCollapsible call after restoreState is needed for users
that have an already saved state since the childrenCollapsible property
is saved with the state.

BUG: 284957

M  +1    -0    kmymoney/views/kbudgetview.cpp
M  +10   -11   kmymoney/views/kbudgetviewdecl.ui
M  +1    -0    kmymoney/views/kpayeesview.cpp
M  +26   -23   kmymoney/views/kpayeesviewdecl.ui

http://commits.kde.org/kmymoney/30cdf048db1078a68961f39bcfb56aec79d2f96d
Comment 7 Cristian Oneț 2011-12-10 11:11:44 UTC
The part which was fixed by the commits is that the widgets should not be collapsible anymore.

I've tested the payees view using the smallest resolution of the window and it seemed to behave appropriately (I could see all info both on the left and on the right side of the splitter).

If you fell you need more horizontal space check out the 'Tabbed' view in 'General'->'Views' tab of the KMyMoney configuration dialog.