kmymoney/views/kpayeesview.cpp
@@ -208,6 +208,7 @@ KPayeesView::KPayeesView(QWidget *parent) :
   // use the size settings of the last run (if any)
   KConfigGroup grp = KGlobal::config()->group("Last Use Settings");
   m_splitter->restoreState(grp.readEntry("KPayeesViewSplitterSize", QByteArray()));
+  m_splitter->setChildrenCollapsible(false);
 }
 
 KPayeesView::~KPayeesView()
